Implementando banco para cadastrar nova pessoa

--- a/Public/README.me
+++ b/Public/README.me
@@ -2,4 +2,4 @@
 
 Para desenvolvimento deste projeto foi utilizado o ambiente do XAMPP. Para utilização do projeto basta seguir os passos a seguir:
 
-1. Primeiramente abra o arquivo "criacao_banco.txt" e execute os scripts em ordem para criação do banco de dados, caso altere a base de dados vá para o arquivo "/config/database.php" e altere o parametro 'crud' para o nome da sua base de dados.
+1. Primeiramente abra o arquivo "Public/docs/criacao_banco.txt" e execute os scripts em ordem para criação do banco de dados, caso altere a base de dados vá para o arquivo "App/Database/Connection.php" e altere o parametro 'crud' para o nome da sua base de dados.
