Finalizando telas, layouts e README do projeto

--- a/Public/README.me
+++ b/Public/README.me
@@ -1,5 +1,15 @@
 # CRUD basico em PHP com MySQL
 
-Para desenvolvimento deste projeto foi utilizado o ambiente do XAMPP. Para utilização do projeto basta seguir os passos a seguir:
+Para desenvolvimento deste projeto foi utilizado o ambiente do XAMPP. 
+Para utilização do projeto basta seguir os passos a seguir:
 
-1. Primeiramente abra o arquivo "Public/docs/criacao_banco.txt" e execute os scripts em ordem para criação do banco de dados, caso altere a base de dados vá para o arquivo "App/Database/Connection.php" e altere o parametro 'crud' para o nome da sua base de dados.
+1. Primeiramente abra o arquivo "Public/docs/criacao_banco.txt" e 
+execute os scripts em ordem para criação do banco de dados, 
+caso altere a base de dados vá para o arquivo "App/Database/Connection.php" e 
+altere o parametro 'crud' para o nome da sua base de dados.
+
+2. Após configurar a base de dados que será utilizada, 
+basta escolher o software que será utilizado para criar um servidor local para rodar o projeto
+(para desenvolvimento foi utilizado o XAMPP).
+
+3. Após definir o software, basta digitar no navegador "http://localhost/crudphp" que o projeto será iniciado.
