--- a/README.me
+++ b/README.me
@@ -1,5 +1,4 @@
-<h1>CRUD basico em PHP com MySQL</h1>
-<hr>
+#CRUD basico em PHP com MySQL
 
 Para desenvolvimento deste projeto foi utilizado o ambiente do XAMPP. 
 Para utilização do projeto basta seguir os passos a seguir:
