--- a/README.me
+++ b/README.me
@@ -1,4 +1,4 @@
-## CRUD basico em PHP com MySQL
+# CRUD basico em PHP com MySQL
 
 Para desenvolvimento deste projeto foi utilizado o ambiente do XAMPP. 
 Para utilização do projeto basta seguir os passos a seguir:
